--- a/package.json
+++ b/package.json
@@ -48,22 +48,28 @@
   },
   "scripts": {
     "build-package": "rollup --config ./tool/rollup.config.js",
-    "prepublishOnly": "npm run build-package",
+    "prepublishOnly": "pnpm run build-package",
     "bench": "node benchmark",
     "bench2prep": "node benchmark/server.js",
     "bench2": "bombardier --body-file=\"./README.md\" --method=POST --duration=10s --connections=100 http://localhost:3000/api/upload",
-    "fmt": "npm run fmt:prepare '**/*'",
+    "fmt": "pnpm run fmt:prepare '**/*'",
     "fmt:prepare": "prettier --write",
-    "lint": "npm run lint:prepare .",
+    "lint": "pnpm run lint:prepare .",
     "lint:prepare": "eslint --cache --fix --quiet --format codeframe",
     "fresh": "rm -rf ./node_modules",
+
+    "test-specific": "node --disable-warning=ExperimentalWarning --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/standalone/keep-alive-error.test.js",
+    "test-jest": "node --disable-warning=ExperimentalWarning --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/ --coverage",
+    "test-node": "node --disable-warning=ExperimentalWarning --test ./test-node/**/*.test.*",
+
+    "test-node:ci": "node --experimental-vm-modules ./node_modules/.bin/nyc node --test ./test-node/**/*.test.*",
+    "test-jest:ci": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/ --coverage",
+
+    "test:local": "pnpm run test-node && pnpm run test-jest",
+
+    "audit": "pnpm audit --prod --fix",
     "pretest": "rm -rf ./test/tmp && mkdir ./test/tmp",
-    "test-specific": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/standalone/keep-alive-error.test.js",
-    "test": "npm audit --prod && npm run test-jest && npm run test-node",
-    "test-jest": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/ --coverage",
-    "test-node": "node --test test-node/**/*.test.js",
-    "pretest:ci": "npm run pretest",
-    "test:ci": "node --experimental-vm-modules node_modules/.bin/nyc jest --testPathPattern=test/ --coverage && node --disable-warning=ExperimentalWarning --experimental-vm-modules node_modules/.bin/nyc node --test test-node/"
+    "test": "pnpm run audit && pnpm run test-node:ci && pnpm run test-jest:ci"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
