--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formidable",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "license": "MIT",
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/formidable",
@@ -20,14 +20,13 @@
     "fmt:prepare": "prettier --write",
     "lint": "yarn run lint:prepare .",
     "lint:prepare": "eslint --cache --fix --quiet --format codeframe",
-    "reinstall": "del-cli ./node_modules ./yarn.lock",
+    "reinstall": "rm -rf ./node_modules ./yarn.lock",
     "postreinstall": "yarn setup",
     "setup": "yarn",
-    "pretest": "del-cli ./test/tmp && make-dir ./test/tmp",
-    "test": "jest --coverage",
+    "pretest": "rm -rf ./test/tmp && mkdir -p ./test/tmp",
+    "test:local": "jest --coverage",
     "pretest:ci": "yarn run pretest",
-    "test:ci": "nyc jest --coverage",
-    "test:jest": "jest --coverage"
+    "test": "nyc jest --coverage"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
@@ -37,7 +36,6 @@
   },
   "devDependencies": {
     "@tunnckocore/prettier-config": "1.3.8",
-    "del-cli": "3.0.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.1.0",
     "eslint-config-prettier": "6.11.0",
@@ -47,7 +45,6 @@
     "husky": "4.2.5",
     "jest": "27.2.4",
     "koa": "2.11.0",
-    "make-dir-cli": "2.0.0",
     "nyc": "15.0.1",
     "prettier": "2.0.5",
     "prettier-plugin-pkgjson": "0.2.8",
