--- a/package.json
+++ b/package.json
@@ -19,31 +19,10 @@
     "test": "pnpm -r --workspace-concurrency 1 test"
   },
   "devDependencies": {
-    "@eslint/js": "9.24.0",
-    "@ianvs/prettier-plugin-sort-imports": "4.4.1",
     "@types/bun": "1.2.10",
     "@types/node": "22.14.1",
-    "confusing-browser-globals": "1.0.11",
-    "eslint": "9.24.0",
-    "eslint-config-prettier": "10.1.2",
-    "eslint-config-xaxa": "^25.0.12",
-    "eslint-import-resolver-typescript": "4.3.2",
-    "eslint-plugin-astro": "1.3.1",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-no-use-extend-native": "0.7.2",
-    "eslint-plugin-prettier": "5.2.6",
-    "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-unicorn": "58.0.0",
     "esmc": "^0.18.3",
-    "globals": "16.0.0",
-    "prettier": "^3.5.3",
-    "prettier-eslint": "^16.4.1",
-    "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-pkgjson": "0.3.0",
-    "prettier-plugin-solidity": "1.4.2",
-    "prettier-plugin-tailwindcss": "0.6.11",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "8.30.1"
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.3.0",
   "pnpm": {
