chore: v4 RC on `formidable@next` dist-tag
Signed-off-by: tunnckoCore <5038030+tunnckoCore@users.noreply.github.com>

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,6 @@
 old-source/
-
+packages/formidable-next/src/super-headers.js
+packages/formidable-next/src/super-readable-stream.js
 
 .wrangler
 *.tsbuildinfo
