--- a/package.json
+++ b/package.json
@@ -3,14 +3,8 @@
   "name": "formidable-monorepo",
   "version": "0.0.0",
   "license": "MIT",
-  "description": "A monorepo for Formidable's packages",
-  "workspaces": [
-    "packages/*"
-  ],
+  "description": "A monorepo for Node Formidable packages",
   "type": "module",
-  "engines": {
-    "node": ">=22"
-  },
   "scripts": {
     "clean": "git clean -fdX .",
     "publish-release": "node --env-file .env ./scripts/publish-release.js",
@@ -18,17 +12,11 @@
     "tag-release": "node ./scripts/tag-release.js",
     "test": "pnpm -r --workspace-concurrency 1 test"
   },
-  "devDependencies": {
+  "dependencies": {
     "@types/bun": "1.2.10",
     "@types/node": "22.14.1",
-    "esmc": "^0.18.3",
+    "eslint-config-xaxa": "^25.0.12",
+    "prettier-plugin-pkgjson": "^0.3.0",
     "typescript": "^5.8.3"
-  },
-  "packageManager": "pnpm@10.3.0",
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild",
-      "unrs-resolver"
-    ]
   }
 }
