--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "eslint-config-xaxa": "^25.0.12",
     "prettier-plugin-pkgjson": "^0.3.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "packageManager": "pnpm@10.3.0"
 }
