--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "exclude": ["node_modules", "**/dist/**"],
-  "include": ["src/**/*.ts", "**/*.ts", "**/*.tsx", "**/*.astro", "**/*.js"],
   "extends": ["eslint-config-xaxa/tsconfig.json"],
+  "include": ["src/**/*.ts", "**/*.ts", "**/*.tsx", "**/*.astro", "**/*.js"],
+  "exclude": ["node_modules", "**/dist/**"]
 }
