--- a/.github/____dependabot.yml
+++ b/.github/____dependabot.yml
@@ -3,19 +3,19 @@
 version: 2
 updates:
   # Maintain dependencies for GitHub Actions
-  - package-ecosystem: 'github-actions'
-    directory: '/'
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: 'daily'
+      interval: daily
 
   # Maintain dependencies for npm
-  - package-ecosystem: 'npm'
-    directory: '/'
+  - package-ecosystem: npm
+    directory: /
     schedule:
-      interval: 'daily'
-    labels: ['automerge']
+      interval: daily
+    labels: [automerge]
     allow:
       # Allow both direct and indirect updates for all packages
-      - dependency-type: 'all'
-    rebase-strategy: 'auto'
+      - dependency-type: all
+    rebase-strategy: auto
     # reviewers: []
