--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "private": true,
   "name": "formidable-monorepo",
-  "version": "0.0.0",
-  "license": "MIT",
-  "description": "A monorepo for Node Formidable packages",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
+  "description": "A monorepo for Node Formidable packages",
+  "license": "MIT",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "clean": "git clean -fdX .",
     "publish-release": "node --env-file .env ./scripts/publish-release.js",
@@ -15,16 +18,12 @@
   "dependencies": {
     "@types/bun": "1.2.10",
     "@types/node": "22.14.1",
-    "eslint-config-xaxa": "^25.0.12",
-    "prettier-plugin-pkgjson": "^0.3.0",
+    "prettier": "3.5.3",
     "typescript": "^5.8.3",
-    "workspaces-filter": "^0.5.3"
+    "workspaces-filter": "^0.7.3"
   },
-  "packageManager": "pnpm@10.3.0",
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild",
-      "unrs-resolver"
-    ]
+  "devDependencies": {
+    "eslint": "^9.26.0",
+    "eslint-config-xaxa": "^28.0.3"
   }
 }
