Update package.json to use official npm "repository" format
This will help dependency analysis tools to work with formidable

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "A node.js module for parsing form data, especially file uploads.",
   "homepage": "https://github.com/node-formidable/formidable",
   "funding": "https://ko-fi.com/tunnckoCore/commissions",
-  "repository": "node-formidable/formidable",
+  "repository": {
+    "type": "git",
+    "url": "node-formidable/formidable"
+  },
   "type": "module",
   "main": "./dist/index.cjs",
   "exports": {
